--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.1.2"
   },
   "browserslist": [
